Object Mode - Poly/face/vertex count not shown in the status bar. #56759

Closed
opened 2018-09-11 15:33:43 +02:00 by Marcus Papathoma · 5 comments

System Information
Windows 10 Pro

Blender Version
Broken: 2.80.0-git.29c2c307f6e-windows64
Worked: 2.79b

Short description of error
In Object Mode the total poly/face/vertex count is not shown correctly. It is always zero.
In Edit mode the poly/face/vertex count, only of the last selected object is shown. Because Blender 2.8 now offers multi object editing, that also should be adressed. The poly/face/vertex count of all selected objects should be shown.

Exact steps for others to reproduce the error
Open the attached scene.
Poly/face/vertex count in the the status bar is zero.
Select two cubes.
Go into Edit Mode. Only the poly/face/vertex count of the last selected object is shown.

poly_face_vertex_count.blend

**System Information** Windows 10 Pro **Blender Version** Broken: 2.80.0-git.29c2c307f6e-windows64 Worked: 2.79b **Short description of error** In Object Mode the total poly/face/vertex count is not shown correctly. It is always zero. In Edit mode the poly/face/vertex count, only of the last selected object is shown. Because Blender 2.8 now offers multi object editing, that also should be adressed. The poly/face/vertex count of all selected objects should be shown. **Exact steps for others to reproduce the error** Open the attached scene. Poly/face/vertex count in the the status bar is zero. Select two cubes. Go into Edit Mode. Only the poly/face/vertex count of the last selected object is shown. [poly_face_vertex_count.blend](https://archive.blender.org/developer/F4665100/poly_face_vertex_count.blend)

Added subscriber: @machieb

Added subscriber: @machieb

Added subscribers: @Sergey, @ideasman42, @mont29

Added subscribers: @Sergey, @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2018-09-12 12:08:50 +02:00

@ideasman42, @Sergey, not sure how much of a TODO/WIP that is?

@ideasman42, @Sergey, not sure how much of a TODO/WIP that is?
Campbell Barton was unassigned by Dalai Felinto 2018-09-12 14:33:41 +02:00
Dalai Felinto self-assigned this 2018-09-12 14:33:41 +02:00

This issue was referenced by bf709f9d36

This issue was referenced by bf709f9d36578a22ed5af708ec72f844b1dfa79a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56759
No description provided.