Fix T56759: Status bar not working for multi-objects nor object mode